# src/main/java/com/hermanvfx/springbackreviewplatform/controller/ReviewController.java
@@ -26,6 +26,7 @@ public class ReviewController implements ReviewApi {
 
     @Override
     public ResponseEntity<ReviewDto> closeReview(
+            String authorization,
             UUID reviewId,
             Boolean isDone,
             AuthenticationToken request) {
@@ -37,37 +38,37 @@ public class ReviewController implements ReviewApi {
     }
 
     @Override
-    public ResponseEntity<ReviewDto> createReview(ShortReviewDto shortReviewDto) {
+    public ResponseEntity<ReviewDto> createReview(String authorization, ShortReviewDto shortReviewDto) {
         ReviewDto newReview = reviewService.create(shortReviewDto);
         return new ResponseEntity<>(newReview, HttpStatus.CREATED);
     }
 
     @Override
-    public ResponseEntity<ReviewDto> createReviewForUser(ShortReviewDto shortReviewDto) {
+    public ResponseEntity<ReviewDto> createReviewForUser(String authorization, ShortReviewDto shortReviewDto) {
         ReviewDto newReview = reviewService.createForUser(shortReviewDto);
         return new ResponseEntity<>(newReview, HttpStatus.CREATED);
     }
 
     @Override
-    public ResponseEntity<ReviewListDto> findAllReviews(Integer page, Integer size) {
+    public ResponseEntity<ReviewListDto> findAllReviews(String authorization, Integer page, Integer size) {
         Pageable pageable = PageRequest.of(page, size);
         return new ResponseEntity<>(reviewService.findAllReviews(pageable), HttpStatus.OK);
     }
 
     @Override
-    public ResponseEntity<ReviewListDto> findTobeReviews(Integer page, Integer size) {
+    public ResponseEntity<ReviewListDto> findTobeReviews(String authorization, Integer page, Integer size) {
         Pageable pageable = PageRequest.of(page, size);
         return new ResponseEntity<>(reviewService.findTobeReviews(pageable), HttpStatus.OK);
     }
 
     @Override
-    public ResponseEntity<ReviewListDto> findCanceledReviews(Integer page, Integer size) {
+    public ResponseEntity<ReviewListDto> findCanceledReviews(String authorization, Integer page, Integer size) {
         Pageable pageable = PageRequest.of(page, size);
         return new ResponseEntity<>(reviewService.findCanceledReviews(pageable), HttpStatus.OK);
     }
 
     @Override
-    public ResponseEntity<ReviewListDto> findPassedReviews(Integer page, Integer size) {
+    public ResponseEntity<ReviewListDto> findPassedReviews(String authorization, Integer page, Integer size) {
         Pageable pageable = PageRequest.of(page, size);
         return new ResponseEntity<>(reviewService.findPassedReviews(pageable), HttpStatus.OK);
     }
@@ -79,14 +80,14 @@ public class ReviewController implements ReviewApi {
     }
 
     @Override
-    public ResponseEntity<ReviewDto> findReviewById(UUID reviewId) {
+    public ResponseEntity<ReviewDto> findReviewById(String authorization, UUID reviewId) {
         return new ResponseEntity<>(reviewService.findUserById(reviewId), HttpStatus.OK);
     }
 
 
 
     @Override
-    public ResponseEntity<ReviewDto> updateReview(UUID reviewId, ReviewDto reviewDto) {
+    public ResponseEntity<ReviewDto> updateReview(String authorization, UUID reviewId, ReviewDto reviewDto) {
         return new ResponseEntity<>(reviewService.update(reviewDto, reviewId), HttpStatus.OK);
     }
 }
