# src/main/java/com/hermanvfx/springbackreviewplatform/security/auth/RegisterRequest.java
@@ -11,8 +11,9 @@ import lombok.NoArgsConstructor;
 @NoArgsConstructor
 public class RegisterRequest {
 
-    private String firstname;
-    private String lastname;
+    private String firstName;
+    private String lastName;
     private String email;
     private String password;
+    private String vk;
 }
